----------------
Release v101
----------------

General:
-update display to "MP v1.5"

Firmware:
-esp.boot: added memory self-test at boot
-esp.factory: cherry-picked WDT extension for OTA reliability

HEAD1,HEAD2:
-add esp memory (cache ram) test.
-new error code 502 [HEAD_ESP_MEM_TEST]

ROBOTx,PACKOUTx:
-increase charge current threshold (->425mA) to be more consistent with BODY3 headless test.

----------------
Release v100
----------------

General:
-updated radio.bin, rev10. New modes 'S','T','U','V' for passive cube advertisement scanning.

CUBEx:
-init radio mode at boot
-after pgm and LED test, verify advertising packets received from cube (matches serial#/id just written).
-new error code 707 [CUBE_SCAN_FAILED]

DEBUG:
-test cube scan modes

----------------
Release v99
----------------

General:
-print fixture hw/fw rev info in test log header

Firmware:
-syscon, disabled BLE

BODY3,ROBOTx,PACKOUTx:
-add flashlight test.
-new error code 607 [BODY_FLASHLIGHT]
-improve chargeTest speed + log more debug data

Bugfix:
-ROBOTx/PLAYPEN could throw error 0 (success) on charge comm failure
-BODY3 chargeTest E623 (overvoltage) handling. Would get E400 or never stop motorslam.

----------------
Release v98
----------------

Firmware:
-syscon,robot changes to support parameterized test tone playback (3 tones, adjustable volume)
-syscon bugfixes: correct accessory mode power states (solves PLAYPEN test issues), allow head calibration on PLAYPEN fixture.

PLAYPEN:
-remove power_on cmds keeping cozmo alive during test (solved by syscon bugfix)

BODY3:
-added charge-current test.

SOUND,ROBOTx,PACKOUTx:
-new audio sound (less harsh). Uses new test tone params for selection/volume.
-console cmds to test different sounds/volume (volatile).

Other:
-merge hw version bugfix for 1.5c (unreleased). Report color code to app.

----------------
Release v97
----------------

PLAYPEN:
-revert v96 change. return to sending power_on cmds.

BODY3:
-disable DropLeakage test
